# SolanaLedgerVerification

./: .gitignore  Anchor.toml  package.json  solana.config.ts
contractAddress/: contract-addresses-devnet.json
programs/ledger-verify-sig/: Cargo.toml
programs/ledger-verify-sig/src/: lib.rs
scripts/interact/: bond.ts  verify_call.ts  verify_call_with_param2.ts  verify_call_with_params.ts
scripts/utils/: utils.ts
tests/: basic.test.ts
utils/: utils.ts
